Add tesouro direto image

--- a/index.html
+++ b/index.html
@@ -6,10 +6,15 @@ layout: default
 
 <p align=justify> Having a degree in Computer Engineering by CEFET-MG, I’ve worked as a chatbot developer for a large part of my professional career. Being an interdisciplinary field, it allowed me to explore related fields, such as data analysis, UX writing, product and agile management. Due to my undergraduate thesis and my interest in working alongside business units, I’ve grown closer to Data Science, and now I’m looking for an opportunity to start working in this area. I have a lot of experience with Python, having developed Machine Learning models using neural networks, decision trees, logistic and linear regression. I’ve also worked with git and CI/CD pipelines as part of the development of .NET APIs. This portfolio was created with the intention of showcase my work, specially for potential employers. </p>
 
-<h2> <a href="https://github.com/juniorsergio/Prediction-Projects/tree/master/Tesouro%20Direto"> Time Series Prediction Models for the Interest Rates of Tesouro Direto’s IPCA Securities </a> </h2>
+<h2> <a href="https://github.com/juniorsergio/Prediction-Projects/tree/master/Tesouro%20Direto"> Time Series Prediction Models for the Interest Rates of Tesouro Direto IPCA Securities </a> </h2>
 <h4> <a href="http://dx.doi.org/10.21528/CBIC2021-11"> Published Paper (PT-BR) </a> </h4>
 
 <p align=justify> Launched by the Brazilian Federal Government at the end of 2002, the Tesouro Direto platform makes it possible for individuals to purchase government securities, characterizing it as a safe fixed-income investment that is more profitable than savings. This work proposes the use of machine learning models, more precisely the MLP, CNN and LSTM neural networks, in an attempt to create a model for forecasting the interest rates of four floating-rate Brazilian government securities bonded to the country’s inflation rate (IPCA). To this end, some features of the Brazilian economy that could have a more direct impact on Tesouro Direto rates were analyzed and defined. In the end, it was concluded that CNN has a better overall result, even though it is more sensitive to feature removal. In contrast, the MLP presents almost constant errors, regardless of the variable being removed. </p>
+
+<p align="center">
+	<img src="/assets/images/tesouro_direto.png" alt="tesouro direto" />
+	<div align="center" class="caption">Prevision of Tesouro Direto IPCA Security due to 2024</div>
+</p>
 
 <h2> <a href="https://github.com/juniorsergio/Classification-Projects/blob/master/Credit%20Risk/credit_risk_prediction.ipynb"> Credit Risk Classification Models </a> </h2>
 
