--- a/index.html
+++ b/index.html
@@ -1,53 +1,14 @@
----
-lang: en_US
-layout: default
-
-curriculum: SergioJunior_CV_English
-localization: Belo Horizonte, MG, Brazil
----
-
-
-<h2> About Me </h2>
-
-<p align=justify> Having a degree in Computer Engineering by CEFET-MG, I’ve worked as a chatbot developer for a large part of my professional career. Being an interdisciplinary field, it allowed me to explore related fields, such as data analysis, UX writing, product and agile management. Due to my undergraduate thesis and my interest in working alongside business units, I’ve grown closer to Data Science, and now I’m looking for an opportunity to start working in this area. I have a lot of experience with Python, having developed Machine Learning models using neural networks, decision trees, logistic and linear regression. I’ve also worked with git and CI/CD pipelines as part of the development of .NET APIs. Therefore, this portfolio was created with the intention of showcase my work with Data Science, specially for potential employers. </p>
-
-<h2>
-	{% include link_icon.html %}
-	<a href="https://github.com/juniorsergio/Prediction-Projects/tree/master/Tesouro%20Direto"> Time Series Prediction Models for the Interest Rates of Tesouro Direto IPCA Securities </a>
-</h2>
-
-<h3>
-	{% include link_icon.html %}
-	<a href="http://dx.doi.org/10.21528/CBIC2021-11"> Published Paper (PT-BR) </a>
-</h3>
-
-<p align=justify> Launched by the Brazilian Federal Government at the end of 2002, the Tesouro Direto platform makes it possible for individuals to purchase government securities, characterizing it as a safe fixed-income investment that is more profitable than savings. This work proposed the use of machine learning models, more precisely the MLP, CNN and LSTM neural networks, in order to create models for forecasting the interest rates of four floating-rate Brazilian government securities bonded to the country’s inflation rate (IPCA). To this end, some features of the Brazilian economy that could have a more direct impact on Tesouro Direto rates were analyzed and defined. In the end, it was concluded that CNN has a better overall result, even though it is more sensitive to feature removal. In contrast, the MLP presented almost constant errors, regardless of the variable being removed. </p>
-
-<p align="center">
-	<img src="/assets/images/tesouro_direto.png" alt="tesouro direto" />
-	<div align="center" class="caption">CNN's Prediction for Tesouro Direto IPCA Security due to 2024</div>
-</p>
-
-<h2>
-	{% include link_icon.html %}
-	<a href="https://github.com/juniorsergio/Classification-Projects/blob/master/Credit%20Risk/credit_risk_prediction.ipynb"> Credit Risk Classification Models </a>
-</h2>
-
-<p align=justify> One of the most important real-live scenarios for Data Science is the prediction of credit risk, whether someone is going to become a defaulter. This project was developed as part of the admission process of a company, meaning the data provided comes from a real company in the sector. My purpose was to create a machine learning model able to predict the defaulters within a scenario that is safe for the company, instead of trying to pursue the perfect model. During the development, two problems with the data had to be dealt with: the class imbalance and a huge amount of missing values for one of the variables. With that in mind, five algorithms based on decision trees were created, and the best for this particular problem was the XGBoost, using a special parameter to compensate for the class imbalance. The result was a precision of 98% for the negative class and a recall of 70% for the positive (defaulter) class. </p>
-
-<p align="center">
-	<img src="/assets/images/credit_risk.png" alt="credit risk" />
-	<div align="center" class="caption">Confusion Matrix of the XGBoost model</div>
-</p>
-
-<h2>
-	{% include link_icon.html %}
-	<a href="https://github.com/juniorsergio/DataExploration/blob/master/Breaking%20Bad%20-%20Rating%20analysis/breaking-bad-imdb-rating-analysis-by-writer.ipynb"> Data Exploration of Breaking Bad Episodes Rating </a>
-</h2>
-
-<p align=justify> Breaking Bad is considered to be one of the best TV shows ever made, which raises questions about how this quality level was obtained. One of those questions, and the purpose of this project, is if there could be any relationship between a an episode IMDB rating and its writer. More specifically, the hyphotesis was that since VInce Gilligan is the crator of the series, his episodes would probably have the highest ratings. In order to do that, this <a href="https://www.kaggle.com/varpit94/breaking-bad-tv-show-all-seasons-episodes-data">dataset</a> was used since it had the two necessary informations: the episode's rating and its writer. The result of the analysis was that the ratings don't appear to have a strong relationship with the episode's writer. </p>
-
-<p align="center">
-	<img src="/assets/images/breaking_bad.png" alt="breaking bad" />
-	<div align="center" class="caption">Boxplot of episode ratings per writer</div>
-</p>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <base target="_blank">
+    <link rel="icon" type="image/png" href="./src/assets/images/favicon.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Sergio Junior</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
+</html>
