--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <base target="_blank">
-    <link rel="icon" type="image/png" href="/assets/favicon.5dde2fe6.png" />
+    <link rel="icon" type="image/png" href="/assets/favicon.b5dd6ac8.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sergio Junior</title>
-    <script type="module" crossorigin src="/assets/index.374fbc54.js"></script>
-    <link rel="stylesheet" href="/assets/index.0aa9d518.css">
+    <script type="module" crossorigin src="/assets/index.b6370f97.js"></script>
+    <link rel="stylesheet" href="/assets/index.29f0ba99.css">
   </head>
   <body>
     <div id="root"></div>
