--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <link rel="icon" type="image/png" href="/assets/favicon.b5dd6ac8.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sergio Junior</title>
-    <script type="module" crossorigin src="/assets/index.4d5b373d.js"></script>
+    <script type="module" crossorigin src="/assets/index.b6370f97.js"></script>
+    <link rel="stylesheet" href="/assets/index.41f4304b.css">
   </head>
   <body>
     <div id="root"></div>
