--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
     <meta charset="UTF-8" />
     <base target="_blank">
-    <link rel="icon" type="image/png" href="/assets/favicon.b5dd6ac8.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+
+    <link rel="icon" type="image/png" href="/assets/favicon.b5dd6ac8.svg" />
     <title>Sergio Junior</title>
-    <script type="module" crossorigin src="/assets/index.8c226d8f.js"></script>
+    <script type="module" crossorigin src="/assets/index.abf03518.js"></script>
   </head>
   <body>
     <div id="root"></div>
