--- a/index.html
+++ b/index.html
@@ -4,6 +4,18 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
+    <link rel="preload" 
+      href="https://static.neris-assets.com/images/personality-types/scenes/analysts_Architect_INTJ_strengths.svg"
+      as="image"
+      type="image/svg+xml"
+    />
+
+    <link rel="preload" 
+      href="https://static.neris-assets.com/images/personality-types/scenes/analysts_Architect_INTJ_friendships.svg"
+      as="image"
+      type="image/svg+xml"
+    />
+
     <meta charset="UTF-8" />
     <base target="_blank">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -12,7 +24,7 @@
 
     <link rel="icon" type="image/png" href="/assets/favicon.b5dd6ac8.svg" />
     <title>Sergio Junior</title>
-    <script type="module" crossorigin src="/assets/index.2b7209d6.js"></script>
+    <script type="module" crossorigin src="/assets/index.acc7268b.js"></script>
   </head>
   <body>
     <div id="root"></div>
