--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 
-    <link rel="icon" type="image/png" href="/assets/favicon.b5dd6ac8.svg" />
+    <link rel="icon" type="image/svg" href="/assets/favicon.b5dd6ac8.svg" />
     <title>Sergio Junior</title>
-    <script type="module" crossorigin src="/assets/index.1291c378.js"></script>
+    <script type="module" crossorigin src="/assets/index.8f374672.js"></script>
     <link rel="stylesheet" href="/assets/index.7875b872.css">
   </head>
   <body>
