--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <base target="_blank">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" media="print" onload="this.onload=null;this.removeAttribute('media');" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap">
 
     <link rel="icon" type="image/svg" href="/assets/favicon.d1c81628.svg" />
     <title>Sergio Junior</title>
-    <script type="module" crossorigin src="/assets/index.6d02a02d.js"></script>
+    <script type="module" crossorigin src="/assets/index.7669f466.js"></script>
     <link rel="stylesheet" href="/assets/index.7875b872.css">
   </head>
   <body>
