--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <base target="_blank">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" media="print" onload="this.onload=null;this.removeAttribute('media');" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap">
 
     <link rel="icon" type="image/svg" href="favicon.svg" />
     <title>Sergio Junior</title>
