--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
     <meta charset="UTF-8" />
     <base target="_blank">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="stylesheet" media="print" onload="this.onload=null;this.removeAttribute('media');" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap">
+    <link rel="stylesheet" media="print" onload="this.onload=null;this.removeAttribute('media');" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" />
 
     <link rel="icon" type="image/svg" href="/assets/favicon.d1c81628.svg" />
     <title>Sergio Junior</title>
-    <script type="module" crossorigin src="/assets/index.7d892ec2.js"></script>
+    <script type="module" crossorigin src="/assets/index.452c4fa3.js"></script>
     <link rel="stylesheet" href="/assets/index.7875b872.css">
   </head>
   <body>
