--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
     <link rel="stylesheet" media="print" onload="this.onload=null;this.removeAttribute('media');" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" />
 
-    <link rel="icon" type="image/svg" href="/assets/favicon.d1c81628.svg" />
+    <link rel="icon" type="image/svg" href="favicon.svg" />
     <title>Sergio Junior</title>
-    <script type="module" crossorigin src="/assets/index.d1d923b9.js"></script>
+    <script type="module" crossorigin src="/assets/index.cd3d7544.js"></script>
     <link rel="stylesheet" href="/assets/index.7875b872.css">
   </head>
   <body>
