fix: preload font

--- a/index.html
+++ b/index.html
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'" />
 
     <meta charset="UTF-8" />
     <base target="_blank">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Portfolio com alguns projetos que desenvolvi, tanto em front-end, com o qual eu trabalho atualmente, quanto em ciência de dados, que atraiu bastante a minha atenção durante a faculdade." />
-
-    <link rel="stylesheet" media="print" onload="this.onload=null;this.removeAttribute('media');" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" />
 
     <link rel="icon" type="image/svg" href="favicon.svg" />
     <title>Sergio Junior</title>
